# e-note-ion

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE.txt  README.md  SECURITY.md  config.example.toml  config.py  e-note-ion.py  entrypoint.sh  exceptions.py  pyproject.toml  scheduler.py
.github/: dependabot.yml
.github/workflows/: auto-release.yml  ci.yml  release.yml
assets/: README.md
content/: DESIGN.md  README.md  aria.json
content/contrib/: TEMPLATE.md  bart.json  bart.md  calendar.json  calendar.md  discogs.json  discogs.md  morning_night.json  morning_night.md  notion.json  notion.md  plex.json  plex.md  trakt.json  trakt.md  weather.json  weather.md
docs/: webhook-reverse-proxy.md
integrations/: bart.py  calendar.py  color.py  discogs.py  http.py  moon.py  morning.py  notion.py  plex.py  trakt.py  vestaboard.py  weather.py
scripts/: check-version-bump.sh
tests/: conftest.py  test_config.py  test_exceptions.py  test_logging.py  test_moon.py  test_morning.py  test_notion.py
tests/core/: test_bart.py  test_calendar.py  test_color.py  test_discogs.py  test_http.py  test_plex.py  test_scheduler.py  test_trakt.py  test_vestaboard.py  test_weather.py  test_webhook.py
tests/integrations/: conftest.py  test_bart.py  test_bart_integration.py  test_calendar_integration.py  test_discogs_integration.py  test_morning_integration.py  test_trakt_integration.py  test_vestaboard_integration.py  test_weather_integration.py
unraid/: e-note-ion.xml
