[project]
name = "e-note-ion"
version = "0.25.2"
description = "Automation for Vestaboard displays — with emotion"
keywords = ["vestaboard", "note", "flagship", "automation", "schedule", "scheduling"]
authors = [
  { name = "Jason Puglisi", email = "jason@pugli.si" }
]
maintainers = [
  { name = "Jason Puglisi", email = "jason@pugli.si" }
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.txt"]
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "caldav>=1.4.0",
    "icalendar>=7.0.0",
    "recurring-ical-events>=3.8.0",
    "requests>=2.32.5",
]

[project.scripts]
e-note-ion = "scheduler:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["scheduler", "config", "exceptions"]

[tool.setuptools.packages.find]
include = ["integrations*"]

[project.urls]
Repository = "https://github.com/JasonPuglisi/e-note-ion"
Issues = "https://github.com/JasonPuglisi/e-note-ion/issues"

[dependency-groups]
dev = [
    "bandit>=1.9.3",
    "pip-audit>=2.10.0",
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=8.3.5",
    "ruff>=0.15.2",
]

[tool.ruff]
line-length = 120
indent-width = 2

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle errors, pyflakes, isort

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-m 'not integration'"
markers = [
  "integration: marks tests that call real external APIs (deselected by default)",
  "require_env: list env var names required for the test to run",
]

[tool.bandit]
exclude_dirs = [".venv", "tests"]
# Add skips = ["BXXX"] here for any false positives that arise

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
